fix add button mobile version

--- a/task_12/css/style.css
+++ b/task_12/css/style.css
@@ -64,6 +64,10 @@ justify-content: center;
        text-align: center;
     }
 
+    .add_button_wrapper {
+        padding-left: 55px;
+    }
+
     .add_button {
         font-size: 8px; 
           width: 120px;
